# HW4_Graph-Based-Reverse-Engineering

./: .env-example  .gitignore  LICENSE  README.md  generate_obsidian.py  main.py  pyproject.toml  scratch_ast.py
.github/workflows/: ci.yml
artifacts/: graph_visualization.html  validation_dashboard.html
config/: logging_config.json  setup.json
data/broken-python/mathsquiz/: mathsquiz_fixed.py
data/broken-python/polygons/: polygons_fixed.py
docs/: PLAN.md  PRD.md  PRD_agent_orchestration.md  PRD_context_management.md  PRD_graph_extraction.md  PRD_skill_routing.md  PRD_token_cost_analysis.md  TODO.md  quality_assessment.md
obsidian/: hot.md  index.md  mathsquiz.md  polygons.md
reports/: bug_fix_report.md
results/: GRAPH_REPORT.md  agent_confusion_matrix.md  confusion_matrix.md  final_report.md  graph.html  graph.json  graph_after.json  graph_before.json  graph_diff.md  token_analysis.md
results/wiki/: hot.md  index.md  log.md
results/wiki/wiki/: mathsquiz.md  polygons.md  projects.md
skills/: bug_detection.md  community_detection.md  graph_analysis.md
src/: main.py
src/graph_rev_eng/: __init__.py  constants.py
src/graph_rev_eng/sdk/: grphify_runner.py  sdk.py
src/graph_rev_eng/services/: __init__.py  ast_node_processor.py  ast_parser.py  community_detector.py  confusion_matrix.py  context_budget.py  context_helpers.py  context_types.py  crew.py  crew_orchestrator.py  crew_steps.py  crew_steps_agents.py  crew_types.py  github_downloader.py  graph_differ.py  graph_differ_format.py  graph_loader.py  graph_models.py  hub_classifier.py  improvement_loop.py  index_builder.py  llm.py  report_generator.py  skill_router.py  skill_types.py  token_counter.py  token_experiment.py
src/graph_rev_eng/shared/: config.py  gatekeeper.py  utils.py  version.py
tests/: conftest.py
tests/integration/: test_gatekeeper_limits.py  test_improvement_loop_integration.py  test_pipeline_e2e.py
tests/unit/test_agents/: test_bug_detector.py  test_bug_rules_mathsquiz.py  test_crew.py  (+4 more)
(+35 files in other folders)
