[project]
name = "graph-rev-eng"
version = "1.00"
description = "AI Agent pipeline for graph-based reverse engineering of Python codebases"
authors = [{ name = "AI Agent", email = "agent@graph-rev-eng.dev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
    "networkx>=3.2.1",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "crewai>=1.14.7",
    "langchain-openai>=1.3.2",
    "graphifyy>=0.8.43",
    "langchain-core",
]

[project.scripts]
graph-rev-eng = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
